Mon Apr 30 16:00:52 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * bin/DCPS/CPPTemplate.pm:
	  Modify ULong to Long to get rid of scoreboard warnings.

Sat Apr 28 19:04:18 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/BuiltInTopicTest.mpc:

          Added a 'requires' for the built_in_topics MPC feature.

Fri Apr 27 15:07:44 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/BuiltInTopicTest.mpc:

          Fixed the case of "monitor.cpp" in the mpc file.

Thu Apr 26 23:18:51 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * bin/dcps_tests.lst:

          Enabled the builtintopic unit test and added the new
          builtintopic test.

        * tests/DCPS/BuiltInTopic/main.cpp:

          Uncommented some debugging message.

        * tests/DCPS/BuiltInTopicTest/BuiltInTopicTest.mpc:
        * tests/DCPS/BuiltInTopicTest/DataReaderListener.h:
        * tests/DCPS/BuiltInTopicTest/DataReaderListener.cpp:
        * tests/DCPS/BuiltInTopicTest/Messenger.idl:
        * tests/DCPS/BuiltInTopicTest/README:
        * tests/DCPS/BuiltInTopicTest/Writer.h:
        * tests/DCPS/BuiltInTopicTest/Writer.cpp:
        * tests/DCPS/BuiltInTopicTest/domain_ids:
        * tests/DCPS/BuiltInTopicTest/monitor.cpp:
        * tests/DCPS/BuiltInTopicTest/pub.ini:
        * tests/DCPS/BuiltInTopicTest/publisher.cpp:
        * tests/DCPS/BuiltInTopicTest/run_test.pl:
        * tests/DCPS/BuiltInTopicTest/sub.ini:
        * tests/DCPS/BuiltInTopicTest/subscriber.cpp:
        * tests/DCPS/BuiltInTopicTest/tcp.conf:

          Added the built-in-topic test to verify if a new
          participant or old participant receive the same
          built-in-topic data.

        * tests/DCPS/TransientLocalTest/pub.ini:
        * tests/DCPS/TransientLocalTest/sub.ini:

          Added missing files.

        * tests/DCPS/TransientLocalTest/MessageTypeSupport.idl:
        * tests/DCPS/TransientLocalTest/MessageTypeSupportImpl.h: